--- a/Juans_Thesis/main.tex
+++ b/Juans_Thesis/main.tex
@@ -86,6 +86,12 @@
 \chapter{Methodology}
 \input{chapters/methods.tex}
 
+\chapter{Multi-omic integration characterizes major endotypes of bronchopulmonary dysplasia linked to adult chronic lung disease}
+\input{chapters/invivo_invitro}
+
+\chapter{Cytokines Derived from Nasal Epithelial Lining Fluid in Patients with Asthma}
+\input{chapters/asthma}
+
 \chapter{Discussion}
 \input{chapters/discussion.tex}
 
