--- a/Juans_Thesis/main.tex
+++ b/Juans_Thesis/main.tex
@@ -86,11 +86,20 @@
 \chapter{Methodology}
 \input{chapters/methods.tex}
 
+\chapter{Hyperoxia-induced cell cycle arrest drives long-term impairment of lung development and DNA repair in neonates}
+\input{chapters/invivo_invitro.tex}
+
 \chapter{Multi-omic integration characterizes major endotypes of bronchopulmonary dysplasia linked to adult chronic lung disease}
-\input{chapters/invivo_invitro}
+\input{chapters/bpd.tex}
+
+\chapter{Multi-Omics Regulatory Network Inference in the Presence of Missing Data}
+\input{chapters/benchmark.tex}
+
+\chapter{scNodes: Graphical Interface for Single-Cell Transcriptomics Workflow Development}
+\input{chapters/scnode.tex}
 
 \chapter{Cytokines Derived from Nasal Epithelial Lining Fluid in Patients with Asthma}
-\input{chapters/asthma}
+\input{chapters/asthma.tex}
 
 \chapter{Discussion}
 \input{chapters/discussion.tex}
