Fixing lib paths

--- a/Juans_Thesis/main.tex
+++ b/Juans_Thesis/main.tex
@@ -29,7 +29,7 @@
   % oneside,            % use onesided or twosided layout (oneside, twoside)
   % headmarks=true,     % enable headmarks (true, false)
   % font=times          % define main text font (helvet, times, palatino, libertine)
-]{tumbook}
+]{tum/tumbook}
 
 % For theses that are printed with a transparent cover it is recommended to
 % use the coverpage and provide the proper coverBCOR, so the distance between
