--- a/Juans_Thesis/tum/tumbook.sty
+++ b/Juans_Thesis/tum/tumbook.sty
@@ -119,7 +119,7 @@
 \newlength{\TUMCoverImageWidth}
 
 \newcommand{\theTUMCoverImage}{\vfill\hfill
-  \includegraphics[width=.5\TUMCoverImageWidth]{resources/TUM_Tower.png}
+  \includegraphics[width=.5\TUMCoverImageWidth]{tum/resources/TUM_Tower.png}
 }
 
 
