--- a/Juans_Thesis/main.tex
+++ b/Juans_Thesis/main.tex
@@ -50,7 +50,7 @@
 % thesis metadata
 \title{Thesis title}
 \subtitle{Subtitle of the thesis}
-\author{Author Name}
+\author{Juan David Henao Sanchez}
 
 \degree{Doktor-Ingenieurs (Dr.-Ing.)}
 \dateSubmitted{29.04.2016}
