--- a/Juans_Thesis/main.tex
+++ b/Juans_Thesis/main.tex
@@ -45,7 +45,7 @@
 
 % load additional packages
 \usepackage{lipsum}
-
+\usepackage{pdfpages}
 
 % thesis metadata
 \title{Thesis title}
@@ -94,7 +94,7 @@
 
 \appendix
 \chapter{Appendix}
-\lipsum[4]
+\includepdf[pages=-]{papers/benchmarking.pdf}
 
 % \backmatter
 % \bibliography{}
