--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -6,3 +6,24 @@
   publisher={Elsevier}
 }
 
+@article{wenzel2013complex,
+  title={Complex phenotypes in asthma: current definitions},
+  author={Wenzel, Sally E},
+  journal={Pulmonary pharmacology \& therapeutics},
+  volume={26},
+  number={6},
+  pages={710--715},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{killeen2013pathophysiology,
+  title={Pathophysiology, diagnosis, and clinical assessment of asthma in the adult},
+  author={Killeen, Kathryn and Skora, Elizabeth},
+  journal={Nursing Clinics},
+  volume={48},
+  number={1},
+  pages={11--23},
+  year={2013},
+  publisher={Elsevier}
+}
