--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -27,3 +27,36 @@
   year={2013},
   publisher={Elsevier}
 }
+
+@article{hammad2021basic,
+  title={The basic immunology of asthma},
+  author={Hammad, Hamida and Lambrecht, Bart N},
+  journal={Cell},
+  volume={184},
+  number={6},
+  pages={1469--1485},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{arae2021interleukin,
+  title={Interleukin-33 and thymic stromal lymphopoietin, but not interleukin-25, are crucial for development of airway eosinophilia induced by chitin},
+  author={Arae, Ken and Ikutani, Masashi and Horiguchi, Kotaro and Yamaguchi, Sachiko and Okada, Youji and Sugiyama, Hiroki and Orimo, Keisuke and Morita, Hideaki and Suto, Hajime and Okumura, Ko and others},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={5913},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{toki2020tslp,
+  title={TSLP and IL-33 reciprocally promote each other's lung protein expression and ILC2 receptor expression to enhance innate type-2 airway inflammation},
+  author={Toki, Shinji and Goleniewska, Kasia and Zhang, Jian and Zhou, Weisong and Newcomb, Dawn C and Zhou, Baohua and Kita, Hirohito and Boyd, Kelli L and Peebles Jr, Ray S},
+  journal={Allergy},
+  volume={75},
+  number={7},
+  pages={1606--1617},
+  year={2020},
+  publisher={Wiley Online Library}
+}
