--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -60,3 +60,36 @@
   year={2020},
   publisher={Wiley Online Library}
 }
+
+@article{wynn2015type,
+  title={Type 2 cytokines: mechanisms and therapeutic strategies},
+  author={Wynn, Thomas A},
+  journal={Nature Reviews Immunology},
+  volume={15},
+  number={5},
+  pages={271--282},
+  year={2015},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{crisford2021neutrophils,
+  title={Neutrophils in asthma: the good, the bad and the bacteria},
+  author={Crisford, Helena and Sapey, Elizabeth and Rogers, Geraint B and Taylor, Steven and Nagakumar, Prasad and Lokwani, Ravi and Simpson, Jodie L},
+  journal={Thorax},
+  volume={76},
+  number={8},
+  pages={835--844},
+  year={2021},
+  publisher={BMJ Publishing Group Ltd}
+}
+
+@article{yamasaki2022neutrophils,
+  title={Neutrophils and asthma},
+  author={Yamasaki, Akira and Okazaki, Ryota and Harada, Tomoya},
+  journal={Diagnostics},
+  volume={12},
+  number={5},
+  pages={1175},
+  year={2022},
+  publisher={MDPI}
+}
