--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -93,3 +93,14 @@
   year={2022},
   publisher={MDPI}
 }
+
+@article{parker2014interpreting,
+  title={Interpreting spirometry: the basics},
+  author={Parker, Michael J},
+  journal={Otolaryngologic clinics of North America},
+  volume={47},
+  number={1},
+  pages={39--53},
+  year={2014},
+  publisher={Elsevier}
+}
