--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -104,3 +104,14 @@
   year={2014},
   publisher={Elsevier}
 }
+
+@article{riley2015clinical,
+  title={Clinical implications of having reduced mid forced expiratory flow rates (FEF25-75), independently of FEV1, in adult patients with asthma},
+  author={Riley, Craig M and Wenzel, Sally E and Castro, Mario and Erzurum, Serpil C and Chung, Kian Fan and Fitzpatrick, Anne M and Gaston, Benjamin and Israel, Elliot and Moore, Wendy C and Bleecker, Eugene R and others},
+  journal={PLoS One},
+  volume={10},
+  number={12},
+  pages={e0145476},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
