--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -115,3 +115,28 @@
   year={2015},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@incollection{broaddus2015murray,
+  title={Murray \& Nadel's Textbook of Respiratory Medicine: Volume 1, 2},
+  author={Broaddus, V Courtney and Mason, Robert J and Ernst, Joel D and King, Talmadge E and Lazarus, Stephen C and Murray, John F and Nadel, Jay A and Slutsky, Arthur S and Gotway, Michael B},
+  booktitle={Murray and Nadel's Textbook of Respiratory Medicine: Volume 1, 2, Sixth Edition},
+  pages={1--1849},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{hopkins2018physiology,
+  title={Physiology, functional residual capacity},
+  author={Hopkins, Erin and Sharma, Sandeep},
+  year={2018}
+}
+
+@article{barreiro2004approach,
+  title={An approach to interpreting spirometry},
+  author={Barreiro, Timothy J and Perillo, Irene},
+  journal={American family physician},
+  volume={69},
+  number={5},
+  pages={1107--1115},
+  year={2004}
+}
