--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -140,3 +140,35 @@
   pages={1107--1115},
   year={2004}
 }
+
+@article{parker2014interpreting,
+  title={Interpreting spirometry: the basics},
+  author={Parker, Michael J},
+  journal={Otolaryngologic clinics of North America},
+  volume={47},
+  number={1},
+  pages={39--53},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{gallucci2019use,
+  title={Use of symptoms scores, spirometry, and other pulmonary function testing for asthma monitoring},
+  author={Gallucci, Marcella and Carbonara, Paolo and Pacilli, Angela Maria Grazia and Di Palmo, Emanuela and Ricci, Giampaolo and Nava, Stefano},
+  journal={Frontiers in pediatrics},
+  volume={7},
+  pages={54},
+  year={2019},
+  publisher={Frontiers Media SA}
+}
+
+@article{o2010measuring,
+  title={Measuring asthma control: a comparison of three classification systems},
+  author={O’Byrne, Paul M and Reddel, Helen K and Eriksson, G{\"o}ran and {\"O}stlund, Ollie and Peterson, Stefan and Sears, Malcolm R and Jenkins, Christine and Humbert, Marc and Buhl, Roland and Harrison, Tim W and others},
+  journal={European Respiratory Journal},
+  volume={36},
+  number={2},
+  pages={269--276},
+  year={2010},
+  publisher={Eur Respiratory Soc}
+}
