--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -172,3 +172,11 @@
   year={2010},
   publisher={Eur Respiratory Soc}
 }
+
+@article{galant2023adding,
+  title={Adding oscillometry to spirometry in guidelines better identifies uncontrolled asthma, future exacerbations, potential targeted therapy},
+  author={Galant, Stanley P and Morphew, Tricia},
+  journal={Annals of Allergy, Asthma \& Immunology},
+  year={2023},
+  publisher={Elsevier}
+}
