--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -180,3 +180,13 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@article{bednarek2020current,
+  title={Current place of impulse oscillometry in the assessment of pulmonary diseases.},
+  author={Bednarek, Marcin and Grabicki, Marcin and Piorunek, Tomasz and Batura-Gabryel, Halina},
+  journal={Respiratory medicine},
+  volume={170},
+  pages={105952},
+  year={2020},
+  publisher={Elsevier}
+}
