--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -190,3 +190,14 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{komarow2011impulse,
+  title={Impulse oscillometry in the evaluation of diseases of the airways in children},
+  author={Komarow, Hirsh D and Myles, Ian A and Uzzaman, Ashraf and Metcalfe, Dean D},
+  journal={Annals of allergy, asthma \& immunology},
+  volume={106},
+  number={3},
+  pages={191--199},
+  year={2011},
+  publisher={Elsevier}
+}
