--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -201,3 +201,14 @@
   year={2011},
   publisher={Elsevier}
 }
+
+@article{jabbal2016utility,
+  title={Utility of impulse oscillometry in patients with moderate to severe persistent asthma},
+  author={Jabbal, Sunny and Manoharan, Arvind and Lipworth, Joseph and Lipworth, Brian},
+  journal={Journal of Allergy and Clinical Immunology},
+  volume={138},
+  number={2},
+  pages={601--603},
+  year={2016},
+  publisher={Elsevier}
+}
