--- a/Juans_Thesis/reference.bib
+++ b/Juans_Thesis/reference.bib
@@ -212,3 +212,14 @@
   year={2016},
   publisher={Elsevier}
 }
+
+@article{traister2012inflammatory,
+  title={Inflammatory phenotypes in asthma pathogenesis},
+  author={Traister, Russell S and Wenzel, Sally E},
+  journal={Drug Discovery Today: Disease Mechanisms},
+  volume={9},
+  number={3-4},
+  pages={e75--e81},
+  year={2012},
+  publisher={Elsevier}
+}
