--- a/invitro/analysis/index.Rmd
+++ b/invitro/analysis/index.Rmd
@@ -3,7 +3,7 @@ title: "Home"
 site: workflowr::wflow_site
 output:
   workflowr::wflow_html:
-    toc: false
+    toc: true
 editor_options:
   chunk_output_type: console
 ---
