--- a/invitro/analysis/degs.Rmd
+++ b/invitro/analysis/degs.Rmd
@@ -34,6 +34,23 @@ colnames(frame) <- c(paste0("EC Hyperoxia"," (N = ",nrow(DEG.EC),")"),
                      paste0("FB Hyperoxia"," (N = ",nrow(DEG.MFB),")"),
                      paste0("AT Hyperoxia"," (N = ",nrow(DEG.AT),")"))
 
+p <- upset(frame,nsets = 20, nintersects = 15, text.scale = 2.5, line.size = 1,
+      queries = list(list(query = intersects, 
+                          params = list("AT Hyperoxia (N = 1368)","FB Hyperoxia (N = 1150)"), 
+                          color = "#C6DBEF", active = T),
+                     list(query = intersects, 
+                          params = list("AT Hyperoxia (N = 1368)","FB Hyperoxia (N = 1150)","EC Hyperoxia (N = 69)"), 
+                          color = "#4292C6", active = T)),
+      order.by = c("freq"),empty.intersections = NULL,
+      sets.bar.color = c("#A79AD4","#DF758C","#ACD49F"),
+      sets = colnames(frame),keep.order = TRUE)
+
+pdf("output/figure1/upset.pdf")
+print(p)
+dev.off()
+
+print(p)
+
 upset(frame,nsets = 20, nintersects = 15,
       queries = list(list(query = intersects, 
                           params = list("AT Hyperoxia (N = 1368)","FB Hyperoxia (N = 1150)"), 
@@ -44,6 +61,7 @@ upset(frame,nsets = 20, nintersects = 15,
       order.by = c("freq"),empty.intersections = NULL,
       sets.bar.color = c("#A79AD4","#DF758C","#ACD49F"),
       sets = colnames(frame),keep.order = TRUE)
+
 ```
 
 # Volcano plot
@@ -76,19 +94,17 @@ head(all.hyperoxia[order(all.hyperoxia$padj),],10)
 result <- all.hyperoxia[which(!is.na(all.hyperoxia$padj)),]
 result <- result[order(result$threshold,decreasing = TRUE),]
 
-ggplot(result) +
+p <- ggplot(result) +
   geom_point(aes(x=log2FoldChange, y=-log10(padj),colour=direction)) + 
   scale_color_manual(values=c("#ACD49F","#008F00","#A79AD4","#7030A0","#DF758C","#E7298A","grey")) +
   geom_text_repel(data =subset(result[1:15,], threshold == TRUE), 
                   mapping =aes(x= log2FoldChange, y = -log10(padj), label = result$mgi_symbol[1:15]), size = 3) +
   xlab("log2 fold change") + 
   ylab("-log10 adjusted p-value") +
-  geom_hline(yintercept=-log10(0.05), linetype="dashed", color = "red") + theme_classic() + theme(legend.title = element_blank())
+  geom_hline(yintercept=-log10(0.05), linetype="dashed", color = "red") + theme_classic() + theme(legend.title = element_blank()) +
+  theme(legend.position = "none", text = element_text(size=8), plot.title = element_text(size=8))
 
-```
+ggsave("output/figure1/volcano.png",plot=p,device="png",units="mm",dpi=600,width = 80,height = 80)
 
-# Session info
-
-```{r}
-sessionInfo()
+p
 ```
