--- a/invitro/analysis/single_cell.Rmd
+++ b/invitro/analysis/single_cell.Rmd
@@ -26,9 +26,14 @@ reference <- subset(x = seurat, subset = CellType %in% c("AT_B"))
 reference@meta.data$IDs <- rownames(reference@meta.data)
 DimPlot(reference,group.by="IDs",label = T)
 
-DimPlot(sub.seurat,group.by="CellType") +
- scale_color_manual(labels = c("AT in vitro","AT1","AT2"), 
-                    values = c("#F4B183","#DF758C","#C5E0B4"))
+p <- DimPlot(sub.seurat,group.by="CellType") +
+  theme(legend.position = "none", text = element_text(size=8), plot.title = element_blank(),axis.text = element_text(size = 8)) +
+  scale_color_manual(labels = c("AT in vitro","AT1","AT2"), 
+                    values = c("#ACD49F","#a50f15","#fb6a4a")) +
+                    xlab("UMAP 1") + ylab("UMAP 2")
+ggsave("output/figure2/umap.png",plot=p,device="png",units="mm",dpi=600,width = 70,height = 70)
+
+p
 ```
 
 # FB
